--- a/Atom1.css
+++ b/Atom1.css
@@ -1,6 +1,6 @@
 body {
   background-color:black;font-family:verdana, sans-serif;
-    color:white;font-variant: none
+    color:white;font-variant: none;
   }
 
 h1, h2
@@ -13,7 +13,7 @@ h1, h2
 #div1
   {
     padding:20px;
-    margin:50px 20px 20px 20px;
+    margin:5px 20px 20px 20px;
     border-style:solid;
     border-width:2px;
     border-color:grey;
@@ -24,11 +24,15 @@ h1, h2
     {font-family:serif}
 
 table, td, th {
-  border-style:solid;border-width:1px;border-color:white;border-collapse:collapse;padding:2px;margin:20px;
+  border-style:solid;border-width:1px;border-color:white;border-collapse:collapse;padding:2px;margin:20px;text-align:center;
+}
+
+td {
+  width:30px;
 }
 
 #endlessblue
-  {border-style:solid;border-width: 3px;display:block;margin-top:20px;margin-left:auto;margin-right:auto;height:30%;width:30%;}
+  {border-style:solid;border-width: 3px;margin-top:40px;display:block;margin-left:auto;margin-right:auto;height:30%;width:30%;}
 
 ol
     {list-style-type:decimal}
@@ -36,13 +40,22 @@ ol
 .quote
     {text-align:center;font-size:1.5em;color:blue;}
 
+/*
   #p1 {
-    margin:15px;float:right;
+    margin:2%;float:left;width:46%;
   }
   #p2 {
-    margin:15px;
+    margin:2%;float:right;width:46%;
   }
 
   #p3 {
-    margin:20px
+    margin:2% 2% 25px 2%;clear:both;
+  }
+*/
+
+#float-clear {
+  display: flex;
+}
+  address {
+    font-size:0.8em;margin: 20px auto 0px auto;width:135px;
   }
